# streamlit-portfolio

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: Home.py
src/configs/: config.py
src/pages/: 1_🔬_Object_Detection.py  2_🎾_Tennis_Analysis.py
